--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun May 04 2025 18:17:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun May 04 2025 18:25:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68176e700e91189cc3ec96d4" data-wf-site="68176e700e91189cc3ec96cb">
 <head>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
 </head>
 <body class="body">
   <div id="w-node-_6fcc2f04-b68e-71c3-ff5e-b0818e37e22f-c3ec96d4" class="w-layout-layout wf-layout-layout">
-    <div class="w-layout-cell cell-2"><img src="images/Osmium_Logo.jpg" loading="lazy" width="442" sizes="442px" alt="" srcset="images/Osmium_Logo-p-500.jpg 500w, images/Osmium_Logo-p-800.jpg 800w, images/Osmium_Logo-p-1080.jpg 1080w, images/Osmium_Logo-p-1600.jpg 1600w, images/Osmium_Logo.jpg 1920w">
+    <div class="w-layout-cell cell-2"><img src="images/Osmium_Logo.jpg" loading="lazy" width="442" sizes="(max-width: 479px) 100vw, 442px" alt="" srcset="images/Osmium_Logo-p-500.jpg 500w, images/Osmium_Logo-p-800.jpg 800w, images/Osmium_Logo-p-1080.jpg 1080w, images/Osmium_Logo-p-1600.jpg 1600w, images/Osmium_Logo.jpg 1920w">
       <div class="text-block"><strong><br>Osmium </strong>is among the rarest elements in the Earth&#x27;s crust, making up only 50 parts per trillion. It is a hard, brittle, blue-gray metal, and the densest stable element—about twice as dense as lead and Its stiffness surpasses that of a diamond. </div><img src="images/divider.jpg" loading="lazy" width="157" alt="" class="image">
       <div class="text-block-2">While osmium itself is valuable, <strong><em>its true power often lies in its interactions with other elements</em></strong>. For instance, when alloyed with platinum, it creates some of the hardest, most durable materials available.<br>‍</div>
     </div>
@@ -33,8 +33,8 @@
         <li><strong>To trade: </strong>Click the Ticker Symbol (it will highlight), Click the desired quantity button, Click Send. All orders are MARKET DAY.</li>
       </ul>
       <div>This software may be used under the <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0 license</a> and is <strong>AS IS</strong>. No warranty or guarantee of functionality is made. Trading any security is risky and <strong>Osmium </strong>is to be used at your own risk. Always test it on a paper account. Happy Investing! <br>‍</div>
-      <div>Download for Windows 10+   <a href="https://github.com/Doc2n/PrecisionPortfolio/releases/download/v0.1.0/OsmiumV0.1.0.zip"><strong>https://github.com/Doc2n/PrecisionPortfolio/releases/download/v0.1.0/OsmiumV0.1.0.zip<br><br>‍</strong></a>
-      </div><img src="images/Screenshot-2025-05-04-114954.png" loading="lazy" width="548" sizes="(max-width: 479px) 100vw, 548px" alt="" srcset="images/Screenshot-2025-05-04-114954.png 500w, images/Screenshot-2025-05-04-114954.png 800w, images/Screenshot-2025-05-04-114954.png 1080w, images/Screenshot-2025-05-04-114954.png 1600w, images/Screenshot-2025-05-04-114954.png 1903w" class="image-2">
+      <div>Download for Windows 10+  <a href="http://OsmiumV0.1.0.zip"><strong>OsmiumV0.1.0.zip<br><br>‍</strong></a>
+      </div><img src="images/Screenshot-2025-05-04-114954.png" loading="lazy" width="548" sizes="(max-width: 767px) 100vw, 548px" alt="" srcset="images/Screenshot-2025-05-04-114954.png 500w, images/Screenshot-2025-05-04-114954.png 800w, images/Screenshot-2025-05-04-114954.png 1080w, images/Screenshot-2025-05-04-114954.png 1600w, images/Screenshot-2025-05-04-114954.png 1903w" class="image-2">
     </div>
     <div class="w-layout-cell cell">
       <div><strong><em>Osmium is best used with dedicated tools for scanning, fundamental analysis, charting, news, etc.</em></strong></div>
