--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun May 04 2025 18:25:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun May 04 2025 18:28:01 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68176e700e91189cc3ec96d4" data-wf-site="68176e700e91189cc3ec96cb">
 <head>
   <meta charset="utf-8">
@@ -33,7 +33,7 @@
         <li><strong>To trade: </strong>Click the Ticker Symbol (it will highlight), Click the desired quantity button, Click Send. All orders are MARKET DAY.</li>
       </ul>
       <div>This software may be used under the <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0 license</a> and is <strong>AS IS</strong>. No warranty or guarantee of functionality is made. Trading any security is risky and <strong>Osmium </strong>is to be used at your own risk. Always test it on a paper account. Happy Investing! <br>‍</div>
-      <div>Download for Windows 10+  <a href="http://OsmiumV0.1.0.zip"><strong>OsmiumV0.1.0.zip<br><br>‍</strong></a>
+      <div>Download for Windows 10+  <a href="/OsmiumV0.1.0.zip"><strong>OsmiumV0.1.0.zip<br><br>‍</strong></a>
       </div><img src="images/Screenshot-2025-05-04-114954.png" loading="lazy" width="548" sizes="(max-width: 767px) 100vw, 548px" alt="" srcset="images/Screenshot-2025-05-04-114954.png 500w, images/Screenshot-2025-05-04-114954.png 800w, images/Screenshot-2025-05-04-114954.png 1080w, images/Screenshot-2025-05-04-114954.png 1600w, images/Screenshot-2025-05-04-114954.png 1903w" class="image-2">
     </div>
     <div class="w-layout-cell cell">
