--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun May 04 2025 18:28:01 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun May 04 2025 21:14:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68176e700e91189cc3ec96d4" data-wf-site="68176e700e91189cc3ec96cb">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
       <div class="text-block-2">While osmium itself is valuable, <strong><em>its true power often lies in its interactions with other elements</em></strong>. For instance, when alloyed with platinum, it creates some of the hardest, most durable materials available.<br>‍</div>
     </div>
     <div id="w-node-c62c617a-6372-16fe-1f9e-4afa63a2ffa4-c3ec96d4" class="w-layout-cell cell-3">
-      <div><strong>Osmium </strong>is the precision portfolio allocation tool that I always wanted. It is for investing in a determined set of markets via positions that may ebb and flow with time. The focus is almost exclusively on allocation of equity. No charts, no level 2. nothing to distract from basic information any investor can use to free themselves from spreadsheets and repetitive export/import rituals. As a result, <strong>Osmium </strong>will not be useful for some types of traders and investors. However, if you want a precise, real-time view of asset allocations and the ability to quickly effect those allocations in a simple user interface. <strong>Osmium </strong>may be a tool you want to explore.<br>‍</div>
+      <div><strong>Osmium </strong>is the precision portfolio allocation tool that I always wanted. It is for investing in a determined set of markets via positions that may ebb and flow with time. The focus is almost exclusively on the allocation of equity. No charts, no Level2. The goal is not to distract from basic yet critical portfolio information while combining that information with an easy-to-use trading desktop that eliminates the need for spreadsheets and repetitive export/import rituals. <strong>Osmium </strong>will not be useful for all types of traders and investors. However, if you want a precise, real-time view of asset allocations and the ability to quickly effect those allocations in a simple user interface, <strong>Osmium </strong>may be a tool you want to explore.<br>‍</div>
       <div><strong>Osmium </strong>sits on Alpaca. To use it, you will need an Alpaca account, but <strong>Osmium </strong>can easily be used with an Alpaca paper trading account in order to evaluate its usefulness and get a feel for its responsiveness and how it calculates data.<br>‍</div>
       <ul role="list">
         <li>Download and extract the binaries for Windows. <em>(Below)</em></li>
@@ -34,7 +34,7 @@
       </ul>
       <div>This software may be used under the <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0 license</a> and is <strong>AS IS</strong>. No warranty or guarantee of functionality is made. Trading any security is risky and <strong>Osmium </strong>is to be used at your own risk. Always test it on a paper account. Happy Investing! <br>‍</div>
       <div>Download for Windows 10+  <a href="/OsmiumV0.1.0.zip"><strong>OsmiumV0.1.0.zip<br><br>‍</strong></a>
-      </div><img src="images/Screenshot-2025-05-04-114954.png" loading="lazy" width="548" sizes="(max-width: 767px) 100vw, 548px" alt="" srcset="images/Screenshot-2025-05-04-114954.png 500w, images/Screenshot-2025-05-04-114954.png 800w, images/Screenshot-2025-05-04-114954.png 1080w, images/Screenshot-2025-05-04-114954.png 1600w, images/Screenshot-2025-05-04-114954.png 1903w" class="image-2">
+      </div><img src="images/Screenshot-2025-05-04-114954.png" loading="lazy" width="548" sizes="(max-width: 767px) 100vw, 548px" alt="" srcset="images/Screenshot-2025-05-04-114954-p-500.png 500w, images/Screenshot-2025-05-04-114954-p-800.png 800w, images/Screenshot-2025-05-04-114954-p-1080.png 1080w, images/Screenshot-2025-05-04-114954-p-1600.png 1600w, images/Screenshot-2025-05-04-114954.png 1903w" class="image-2">
     </div>
     <div class="w-layout-cell cell">
       <div><strong><em>Osmium is best used with dedicated tools for scanning, fundamental analysis, charting, news, etc.</em></strong></div>
