--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon May 05 2025 14:17:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri May 09 2025 11:33:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68176e700e91189cc3ec96d4" data-wf-site="68176e700e91189cc3ec96cb">
 <head>
   <meta charset="utf-8">
@@ -35,9 +35,9 @@
       </ul>
       <div>This software may be used under the <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0 license</a> and is <strong>AS IS</strong>. No warranty or guarantee of functionality is made. Trading any security is risky and <strong>Osmium </strong>is to be used at your own risk. Always test it on a paper account. Happy Investing! <br>‍</div>
       <div>Download for Windows 10+  <a href="/OsmiumV0.1.3.zip"><strong>OsmiumV0.1.3.zip<br><br>‍</strong></a>
-      </div><img src="images/Screenshot-2025-05-04-114954.png" loading="lazy" width="599" sizes="(max-width: 767px) 100vw, 599px" alt="" srcset="images/Screenshot-2025-05-04-114954-p-500.png 500w, images/Screenshot-2025-05-04-114954-p-800.png 800w, images/Screenshot-2025-05-04-114954-p-1080.png 1080w, images/Screenshot-2025-05-04-114954-p-1600.png 1600w, images/Screenshot-2025-05-04-114954.png 1903w" class="image-2">
+      </div><img src="images/OsmiumV0.1.3.png" loading="lazy" sizes="(max-width: 2660px) 100vw, 2660px" srcset="images/OsmiumV0.1.3.png 500w, images/OsmiumV0.1.3.png 800w, images/OsmiumV0.1.3.png 1080w, images/OsmiumV0.1.3.png 1600w, images/OsmiumV0.1.3.png 2000w, images/OsmiumV0.1.3.png 2600w, images/OsmiumV0.1.3.png 2660w" alt="">
     </div>
-    <div class="w-layout-cell cell"></div>
+    <div class="w-layout-cell cell"><img src="images/Config.png" loading="lazy" sizes="(max-width: 1348px) 100vw, 1348px" srcset="images/Config.png 500w, images/Config.png 800w, images/Config.png 1080w, images/Config.png 1348w" alt=""></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68176e700e91189cc3ec96cb" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
