--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon May 19 2025 20:40:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 00:30:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="682a732d00d93f05c1d4aa6a" data-wf-site="682a732c00d93f05c1d4aa02">
 <head>
   <meta charset="utf-8">
@@ -41,16 +41,16 @@
       <div class="divider"></div>
       <div class="w-layout-grid main-paragraph-wrap">
         <p id="w-node-_56f2b96e-ae6e-7af1-6a3b-a2d7387904db-c1d4aa6a" class="paragraph-light">While osmium itself is valuable, <strong><em>its true power often lies in its interactions with other elements</em></strong>. For instance, when alloyed with platinum, it creates some of the hardest, most durable materials available.<br>‍<br>‍<strong><em>Osmium is best used with dedicated tools for scanning, fundamental analysis, charting, news, etc.</em></strong></p>
-        <p id="w-node-_56f2b96e-ae6e-7af1-6a3b-a2d7387904dd-c1d4aa6a" class="paragraph-light"><strong>Osmium </strong>is a real-time trading desk for managing a portfolio of markets over time. The focus is on the allocation of equity and the execution of orders with a precise foreknowlege of how each order will effect the equity balance. Osmium is a distraction-free, easy-to-use trading desktop.</p>
+        <p id="w-node-_56f2b96e-ae6e-7af1-6a3b-a2d7387904dd-c1d4aa6a" class="paragraph-light"><strong>Osmium </strong>is a real-time trading desk for managing a portfolio of markets over time. The focus is on the allocation of equity and the execution of orders with a precise foreknowledge of how each order will effect the equity balance. Osmium is a distraction-free, easy-to-use trading desktop.</p>
       </div>
     </div>
     <div class="container">
       <div class="products-heading">
-        <h3 class="heading-2">The simple workflow is easy to remember, think <strong><em>SSS</em></strong> ...</h3>
+        <h3 class="heading-2">The execution workflow is simply <strong><em>S</em></strong><em>ymbol,</em><strong><em> S</em></strong><em>hares, and </em><strong><em>S</em></strong><em>end</em> ...</h3>
         <div class="paragraph-bigger cc-bigger-light">Click the <strong>S</strong>ymbol, click the <strong>S</strong>hares, click <strong>S</strong>end.</div>
       </div>
     </div>
-    <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-05-19-161444.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/Screenshot-2025-05-19-161444.png 500w, images/Screenshot-2025-05-19-161444.png 800w, images/Screenshot-2025-05-19-161444.png 1080w, images/Screenshot-2025-05-19-161444.png 1600w, images/Screenshot-2025-05-19-161444.png 1778w" alt=""></div>
+    <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-05-19-161444.png" loading="lazy" width="Auto" height="Auto" alt="" srcset="images/Screenshot-2025-05-19-161444-p-500.png 500w, images/Screenshot-2025-05-19-161444-p-800.png 800w, images/Screenshot-2025-05-19-161444-p-1080.png 1080w, images/Screenshot-2025-05-19-161444-p-1600.png 1600w, images/Screenshot-2025-05-19-161444.png 1778w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"></div>
   </div>
   <section>
     <div id="w-node-_1433ebe6-ce7e-fd63-9463-432dc3419a18-c1d4aa6a" class="w-layout-layout wf-layout-layout">
@@ -58,15 +58,19 @@
         <div class="text-block">Setup is easy using the dedicated Config tool. Just run it, enter your keys and symbols, pick your environment and save. All information is encrypted using AES and you will never need to see it again. The Osmium interface will decrypt and load the config at startup.<br>‍</div>
         <div>*The keys to the right are for demonstration only.</div>
       </div>
-      <div class="w-layout-cell"><img src="images/Screenshot-2025-05-19-160347.png" loading="lazy" sizes="(max-width: 1171px) 100vw, 1171px" srcset="images/Screenshot-2025-05-19-160347.png 500w, images/Screenshot-2025-05-19-160347.png 800w, images/Screenshot-2025-05-19-160347.png 1080w, images/Screenshot-2025-05-19-160347.png 1171w" alt=""></div>
+      <div class="w-layout-cell"><img src="images/Screenshot-2025-05-19-160347.png" loading="lazy" sizes="(max-width: 1171px) 100vw, 1171px" srcset="images/Screenshot-2025-05-19-160347-p-500.png 500w, images/Screenshot-2025-05-19-160347-p-800.png 800w, images/Screenshot-2025-05-19-160347-p-1080.png 1080w, images/Screenshot-2025-05-19-160347.png 1171w" alt=""></div>
       <div class="w-layout-cell">
-        <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-05-19-161457.png" loading="lazy" width="397" sizes="(max-width: 479px) 100vw, 397px" alt="" srcset="images/Screenshot-2025-05-19-161457.png 500w, images/Screenshot-2025-05-19-161457.png 561w"></div>
+        <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-05-19-161457.png" loading="lazy" width="488" sizes="(max-width: 767px) 100vw, 488px" alt="" srcset="images/Screenshot-2025-05-19-161457-p-500.png 500w, images/Screenshot-2025-05-19-161457.png 561w" class="image-3"></div>
       </div>
-      <div class="w-layout-cell">
+      <div class="w-layout-cell cell">
         <div class="text-block-2">Order entry is fast and easy. The Cost will auto-calculate in $ and % letting you know what the impact of the trade will be on your market&#x27;s position. And the keyboard-free order entry is very touch-screen compatible. Trading on tablets was never easier.</div>
       </div>
       <div class="w-layout-cell">
-        <div class="text-block-3"><strong>Osmium </strong>sits on Alpaca. To use it, you will need an Alpaca account, but <strong>Osmium </strong>can easily be used with an Alpaca paper trading account in order to evaluate its usefulness and get a feel for its responsiveness and how it calculates data.<br><br>This software may be used under the <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0 license</a> and is <strong>AS IS</strong>. No warranty or guarantee of functionality is made. Trading any security is risky and <strong>Osmium </strong>is to be used at your own risk. Always test it on a paper account. Happy Investing!<br><br><strong>Osmium </strong>is not affiliated with Alpaca Brokerage. No alpacas were harmed in the making of this software or website.<br>‍</div>
+        <div class="w-layout-blockcontainer w-container"></div>
+        <div class="text-block-3"><strong>Osmium </strong>sits on Alpaca. To use it, you will need an Alpaca account. It is recommended that a paper account is used in order to evaluate its usefulness and get a feel for its responsiveness and how it calculates data.<br><br>This software may be used under the<strong> Apache 2 license AS IS</strong>. Here is a link:<br>
+          <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0 license</a>No warranty or guarantee of functionality is made. Trading any security is risky and <strong>Osmium </strong>is to be used at your own risk. <br><br><strong>Osmium </strong>is not affiliated with Alpaca Brokerage. No alpacas were harmed in the making of this software or website.<br>‍
+        </div>
+        <div class="w-layout-blockcontainer w-container"></div>
       </div>
       <div class="w-layout-cell">
         <div class="w-layout-blockcontainer container-2 w-container"><img src="images/Os-Icon.png" loading="lazy" width="350" height="350" alt="" srcset="images/Os-Icon-p-500.png 500w, images/Os-Icon-p-800.png 800w, images/Os-Icon.png 1067w" sizes="(max-width: 479px) 100vw, 350px" class="image-2"></div>
