--- a/detail_category.html
+++ b/detail_category.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 14:41:43 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 14:56:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="682a732d00d93f05c1d4aa6b" data-wf-site="682a732c00d93f05c1d4aa02">
 <head>
   <meta charset="utf-8">
@@ -22,8 +22,8 @@
       <a href="index.html" class="logo-link w-nav-brand"><img src="images/Os-Icon.png" width="65" sizes="(max-width: 479px) 77vw, 65px" srcset="images/Os-Icon-p-500.png 500w, images/Os-Icon-p-800.png 800w, images/Os-Icon.png 1067w" alt="" class="logo-image"></a>
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
-          <a href="products.html" class="navigation-item w-nav-link">Look</a>
-          <a href="about.html" class="navigation-item w-nav-link">Learn</a>
+          <a href="#" class="navigation-item w-nav-link">Look</a>
+          <a href="#" class="navigation-item w-nav-link">Learn</a>
         </nav>
         <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
       </div>
@@ -33,7 +33,7 @@
     <div class="container cc-heading-wrap">
       <h1>Our Products</h1>
       <div class="store-categories-wrap">
-        <a href="products.html" class="products-category-link">All Products</a>
+        <a href="/products" class="products-category-link">All Products</a>
         <div class="w-dyn-list">
           <div role="list" class="collection-list w-dyn-items">
             <div role="listitem" class="w-dyn-item">
@@ -86,11 +86,11 @@
         <div id="w-node-_88a386dd-8f07-0c34-70f0-2d9f87e2971d-87e29718" class="label">Menu</div>
         <div id="w-node-_88a386dd-8f07-0c34-70f0-2d9f87e2971f-87e29718" class="links-section-footer">
           <a href="index.html" class="footer-link">Home</a>
-          <a href="about.html" class="footer-link">About</a>
-          <a href="contact.html" class="footer-link">Contact</a>
-          <a href="products.html" class="footer-link">Products</a>
-          <a href="blog.html" class="footer-link">Blog</a>
-          <a href="styleguide.html" class="footer-link">Styleguide</a>
+          <a href="#" class="footer-link">About</a>
+          <a href="#" class="footer-link">Contact</a>
+          <a href="#" class="footer-link">Products</a>
+          <a href="#" class="footer-link">Blog</a>
+          <a href="#" class="footer-link">Styleguide</a>
         </div>
         <div id="w-node-_88a386dd-8f07-0c34-70f0-2d9f87e29724-87e29718" class="label">Categories</div>
         <div id="w-node-_88a386dd-8f07-0c34-70f0-2d9f87e29726-87e29718" class="links-section-footer">
@@ -107,9 +107,9 @@
         </div>
         <div id="w-node-_88a386dd-8f07-0c34-70f0-2d9f87e2972d-87e29718" class="label">Help</div>
         <div id="w-node-_88a386dd-8f07-0c34-70f0-2d9f87e2972f-87e29718" class="links-section-footer">
-          <a href="contact.html" class="footer-link">Shipping</a>
-          <a href="contact.html" class="footer-link">Returns &amp; Exchange</a>
-          <a href="contact.html" class="footer-link">Product Care</a>
+          <a href="#" class="footer-link">Shipping</a>
+          <a href="#" class="footer-link">Returns &amp; Exchange</a>
+          <a href="#" class="footer-link">Product Care</a>
         </div>
         <div id="w-node-_88a386dd-8f07-0c34-70f0-2d9f87e29736-87e29718" class="label">Follow</div>
         <div id="w-node-_88a386dd-8f07-0c34-70f0-2d9f87e29738-87e29718" class="links-section-footer">
