--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 14:41:43 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 14:56:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="682a732d00d93f05c1d4aa6a" data-wf-site="682a732c00d93f05c1d4aa02">
 <head>
   <meta charset="utf-8">
-  <title>Store - Webflow Ecommerce website template</title>
+  <title>Osmium - The free portfolio trading desk</title>
   <meta content="Store - Webflow HTML website template" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6eefaaeddf9248ac13bc72/5cdc90c195678d12d5f23f33_Store%20SEO.jpg" property="og:image">
   <meta content="Store - Webflow HTML website template" property="twitter:title">
@@ -26,7 +26,7 @@
       <div class="intro-content">
         <div class="intro-text">
           <div class="heading-jumbo">Osmium<br></div>
-          <div class="paragraph-bigger cc-bigger-light">The Portfolio Trading Desk<br></div>
+          <div class="paragraph-bigger cc-bigger-light">The <em>Free </em>Portfolio Trading Desk<br></div>
         </div>
         <a href="/Osmium2.zip" class="secondary-button w-inline-block">
           <div>Download</div>
