--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="heading-jumbo">Osmium<br></div>
           <div class="paragraph-bigger cc-bigger-light">The <span class="text-span"><em>Free </em></span>Portfolio Trading Desk<br></div>
         </div>
-        <a href="/Osmium2.zip" class="secondary-button w-inline-block">
+        <a href="/OsmiumSetup.msi" class="secondary-button w-inline-block">
           <div>Download</div>
         </a>
       </div>
