--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon May 26 2025 13:44:50 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jun 02 2025 23:54:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="682a732d00d93f05c1d4aa6a" data-wf-site="682a732c00d93f05c1d4aa02">
 <head>
   <meta charset="utf-8">
@@ -50,7 +50,7 @@
         <div class="paragraph-bigger cc-bigger-light">Click the <strong>S</strong>ymbol, click the <strong>S</strong>hares, click <strong>S</strong>end.</div>
       </div>
     </div>
-    <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-05-26-094254.png" loading="lazy" width="960" height="Auto" alt="" srcset="images/Screenshot-2025-05-26-094254.png 500w, images/Screenshot-2025-05-26-094254.png 800w, images/Screenshot-2025-05-26-094254.png 1080w, images/Screenshot-2025-05-26-094254.png 1600w, images/Screenshot-2025-05-26-094254.png 1777w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" class="image-4"></div>
+    <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-05-26-094254.png" loading="lazy" width="960" height="Auto" alt="" srcset="images/Screenshot-2025-05-26-094254-p-500.png 500w, images/Screenshot-2025-05-26-094254-p-800.png 800w, images/Screenshot-2025-05-26-094254-p-1080.png 1080w, images/Screenshot-2025-05-26-094254-p-1600.png 1600w, images/Screenshot-2025-05-26-094254.png 1777w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" class="image-4"></div>
   </div>
   <section>
     <div id="w-node-_1433ebe6-ce7e-fd63-9463-432dc3419a18-c1d4aa6a" class="w-layout-layout wf-layout-layout">
