--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jun 02 2025 23:54:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jun 03 2025 23:07:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="682a732d00d93f05c1d4aa6a" data-wf-site="682a732c00d93f05c1d4aa02">
 <head>
   <meta charset="utf-8">
@@ -31,6 +31,9 @@
         <a href="/OsmiumSetup.msi" class="secondary-button w-inline-block">
           <div>Download</div>
         </a>
+        <div class="w-layout-blockcontainer container-3 w-container">
+          <div class="text-block-5">Time is on <span class="text-span-2"><strong><em>your</em></strong> </span>side</div>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -47,27 +50,27 @@
     <div class="container">
       <div class="products-heading">
         <h3 class="heading-2">The execution workflow is simply <strong><em>S</em></strong><em>ymbol,</em><strong><em> S</em></strong><em>hares, and </em><strong><em>S</em></strong><em>end</em> ...</h3>
-        <div class="paragraph-bigger cc-bigger-light">Click the <strong>S</strong>ymbol, click the <strong>S</strong>hares, click <strong>S</strong>end.</div>
+        <div class="paragraph-bigger cc-bigger-light">Click the <strong>S</strong>ymbol, click the <strong>S</strong>hares, click <strong>S</strong>end.<br><strong>Osmium </strong>combines the traditional watchlist and position views into a single portfolio. <br>From <em>all cash</em> to <em>fully invested, </em>you will always know the complete state of your portfolio. </div>
       </div>
     </div>
-    <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-05-26-094254.png" loading="lazy" width="960" height="Auto" alt="" srcset="images/Screenshot-2025-05-26-094254-p-500.png 500w, images/Screenshot-2025-05-26-094254-p-800.png 800w, images/Screenshot-2025-05-26-094254-p-1080.png 1080w, images/Screenshot-2025-05-26-094254-p-1600.png 1600w, images/Screenshot-2025-05-26-094254.png 1777w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" class="image-4"></div>
+    <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-06-03-184515.png" loading="lazy" width="960" height="Auto" alt="" srcset="images/Screenshot-2025-06-03-184515.png 500w, images/Screenshot-2025-06-03-184515.png 800w, images/Screenshot-2025-06-03-184515.png 1080w, images/Screenshot-2025-06-03-184515.png 1600w, images/Screenshot-2025-06-03-184515.png 1781w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" class="image-4"></div>
   </div>
   <section>
     <div id="w-node-_1433ebe6-ce7e-fd63-9463-432dc3419a18-c1d4aa6a" class="w-layout-layout wf-layout-layout">
       <div class="w-layout-cell cell-3">
         <div class="text-block">Setup is easy using the dedicated Config tool. Just run it, enter your keys and symbols, pick your environment and save. All information is encrypted using AES and you will never need to see it again. The <strong>Osmium </strong>interface will decrypt and load the config at startup.</div>
         <div>*The keys to the right are for demonstration only.</div>
-        <div class="text-block-4"><strong>Osmium </strong>is built on the advantage of using a fixed sort. The difference between fixed and dynamic sorting is that fixed sorting organizes markets around their target rank. In other words, you can rank markets according to the equity % you want instead of dealing with a sort of their current values. This is essential for incremental and flexible investing toward target values.</div>
+        <div class="text-block-4"><strong>Osmium </strong>is built on the advantage of using a fixed sort. The difference between fixed and dynamic sorting is that fixed sorting organizes markets around their target rank. In other words, you can rank markets according to the equity % you want instead of dealing with a sort of their current values. This is essential for incremental and flexible investing toward target values. Color coding can help to group in any manner for any purpose.</div>
       </div>
-      <div class="w-layout-cell"><img src="images/Screenshot-2025-05-19-160347.png" loading="lazy" sizes="(max-width: 1171px) 100vw, 1171px" srcset="images/Screenshot-2025-05-19-160347-p-500.png 500w, images/Screenshot-2025-05-19-160347-p-800.png 800w, images/Screenshot-2025-05-19-160347-p-1080.png 1080w, images/Screenshot-2025-05-19-160347.png 1171w" alt=""></div>
+      <div class="w-layout-cell"><img src="images/Screenshot-2025-06-03-184618.png" loading="lazy" sizes="(max-width: 1465px) 100vw, 1465px" srcset="images/Screenshot-2025-06-03-184618.png 500w, images/Screenshot-2025-06-03-184618.png 800w, images/Screenshot-2025-06-03-184618.png 1080w, images/Screenshot-2025-06-03-184618.png 1465w" alt=""></div>
       <div class="w-layout-cell">
-        <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-05-19-161457.png" loading="lazy" width="418" sizes="(max-width: 479px) 100vw, 418px" alt="" srcset="images/Screenshot-2025-05-19-161457-p-500.png 500w, images/Screenshot-2025-05-19-161457.png 561w" class="image-3"></div>
+        <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-06-03-184552.png" loading="lazy" width="418" sizes="(max-width: 479px) 100vw, 418px" alt="" srcset="images/Screenshot-2025-06-03-184552.png 500w, images/Screenshot-2025-06-03-184552.png 565w" class="image-3"></div>
       </div>
       <div class="w-layout-cell cell">
         <div class="text-block-2">Order entry is fast and easy. The Cost will auto-calculate in $ and % letting you know what the impact of the trade will be on the position and overall equity. The keyboard-free order entry is touch-screen compatible. <strong>Osmium </strong>is ideal for use with a tablet.</div>
       </div>
       <div class="w-layout-cell">
-        <div class="text-block-3"><strong>Osmium </strong>sits on Alpaca. To use it, you will need an Alpaca account. It can be a Live or Paper account however, it is recommended that a paper account is used to initially evaluate the software and get a feel for its responsiveness and how it presents data.<br><br>This software may be used under the<strong> Apache 2 license AS IS</strong>. Here is a link:<br>
+        <div class="text-block-3"><strong>Osmium </strong>sits on Alpaca. To use it, you will need an Alpaca account. It can be a Live or Paper account however, it is recommended that a paper account is used to initially evaluate the software and get a feel for its responsiveness and how it presents data. The &quot;unlimited&quot; Alpaca data subscription is highly recommended.<br><br>This software may be used under the<strong> Apache 2 license AS IS</strong>. Here is a link:<br>
           <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0 license</a>No warranty or guarantee of functionality is made. Trading any security is risky and <strong>Osmium </strong>is to be used at your own risk. <br><br><strong>Osmium </strong>is not affiliated with Alpaca Brokerage. No alpacas were harmed in the making of this software or website.<br>‍
         </div>
       </div>
