--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jun 03 2025 23:07:51 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jun 03 2025 23:14:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="682a732d00d93f05c1d4aa6a" data-wf-site="682a732c00d93f05c1d4aa02">
 <head>
   <meta charset="utf-8">
@@ -44,16 +44,16 @@
       <div class="divider"></div>
       <div class="w-layout-grid main-paragraph-wrap">
         <p id="w-node-_56f2b96e-ae6e-7af1-6a3b-a2d7387904db-c1d4aa6a" class="paragraph-light">While osmium itself is valuable, <strong><em>its true power often lies in its interactions with other elements</em></strong>. For instance, when alloyed with platinum, it creates some of the hardest, most durable materials available.<br>‍<br>‍<strong><em>Osmium is best used with dedicated tools for scanning, fundamental analysis, charting, news, etc.</em></strong></p>
-        <p id="w-node-_56f2b96e-ae6e-7af1-6a3b-a2d7387904dd-c1d4aa6a" class="paragraph-light"><strong>Osmium </strong>is a real-time trading desk for managing a portfolio of markets over time. The focus is on the allocation of equity and the execution of orders with a precise foreknowledge of how each order will effect the equity balance. <strong>Osmium </strong>is a distraction-free, easy-to-use trading desktop.</p>
+        <p id="w-node-_56f2b96e-ae6e-7af1-6a3b-a2d7387904dd-c1d4aa6a" class="paragraph-light"><strong>Osmium </strong>is a real-time trading desk for managing a portfolio of <strong><em>stock </em></strong>and <strong><em>ETF </em></strong>markets over time. The focus is on the allocation of equity and the execution of orders with a precise foreknowledge of how each order will effect the equity balance. <strong>Osmium </strong>is a distraction-free, easy-to-use trading desktop.</p>
       </div>
     </div>
     <div class="container">
       <div class="products-heading">
         <h3 class="heading-2">The execution workflow is simply <strong><em>S</em></strong><em>ymbol,</em><strong><em> S</em></strong><em>hares, and </em><strong><em>S</em></strong><em>end</em> ...</h3>
-        <div class="paragraph-bigger cc-bigger-light">Click the <strong>S</strong>ymbol, click the <strong>S</strong>hares, click <strong>S</strong>end.<br><strong>Osmium </strong>combines the traditional watchlist and position views into a single portfolio. <br>From <em>all cash</em> to <em>fully invested, </em>you will always know the complete state of your portfolio. </div>
+        <div class="paragraph-bigger cc-bigger-light">Click the <strong>S</strong>ymbol, click the <strong>S</strong>hares, click <strong>S</strong>end.<br><strong>Osmium </strong>combines the traditional watchlist and position views into a single portfolio. <br>From <em>all cash</em> to <em>fully invested, </em>you will always know the complete state of your investments. </div>
       </div>
     </div>
-    <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-06-03-184515.png" loading="lazy" width="960" height="Auto" alt="" srcset="images/Screenshot-2025-06-03-184515.png 500w, images/Screenshot-2025-06-03-184515.png 800w, images/Screenshot-2025-06-03-184515.png 1080w, images/Screenshot-2025-06-03-184515.png 1600w, images/Screenshot-2025-06-03-184515.png 1781w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" class="image-4"></div>
+    <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-06-03-184515.png" loading="lazy" width="960" height="Auto" alt="" srcset="images/Screenshot-2025-06-03-184515-p-500.png 500w, images/Screenshot-2025-06-03-184515-p-800.png 800w, images/Screenshot-2025-06-03-184515-p-1080.png 1080w, images/Screenshot-2025-06-03-184515-p-1600.png 1600w, images/Screenshot-2025-06-03-184515.png 1781w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" class="image-4"></div>
   </div>
   <section>
     <div id="w-node-_1433ebe6-ce7e-fd63-9463-432dc3419a18-c1d4aa6a" class="w-layout-layout wf-layout-layout">
@@ -62,9 +62,9 @@
         <div>*The keys to the right are for demonstration only.</div>
         <div class="text-block-4"><strong>Osmium </strong>is built on the advantage of using a fixed sort. The difference between fixed and dynamic sorting is that fixed sorting organizes markets around their target rank. In other words, you can rank markets according to the equity % you want instead of dealing with a sort of their current values. This is essential for incremental and flexible investing toward target values. Color coding can help to group in any manner for any purpose.</div>
       </div>
-      <div class="w-layout-cell"><img src="images/Screenshot-2025-06-03-184618.png" loading="lazy" sizes="(max-width: 1465px) 100vw, 1465px" srcset="images/Screenshot-2025-06-03-184618.png 500w, images/Screenshot-2025-06-03-184618.png 800w, images/Screenshot-2025-06-03-184618.png 1080w, images/Screenshot-2025-06-03-184618.png 1465w" alt=""></div>
+      <div class="w-layout-cell"><img src="images/Screenshot-2025-06-03-184618.png" loading="lazy" sizes="(max-width: 1465px) 100vw, 1465px" srcset="images/Screenshot-2025-06-03-184618-p-500.png 500w, images/Screenshot-2025-06-03-184618-p-800.png 800w, images/Screenshot-2025-06-03-184618-p-1080.png 1080w, images/Screenshot-2025-06-03-184618.png 1465w" alt=""></div>
       <div class="w-layout-cell">
-        <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-06-03-184552.png" loading="lazy" width="418" sizes="(max-width: 479px) 100vw, 418px" alt="" srcset="images/Screenshot-2025-06-03-184552.png 500w, images/Screenshot-2025-06-03-184552.png 565w" class="image-3"></div>
+        <div class="w-layout-blockcontainer w-container"><img src="images/Screenshot-2025-06-03-184552.png" loading="lazy" width="418" sizes="(max-width: 479px) 100vw, 418px" alt="" srcset="images/Screenshot-2025-06-03-184552-p-500.png 500w, images/Screenshot-2025-06-03-184552.png 565w" class="image-3"></div>
       </div>
       <div class="w-layout-cell cell">
         <div class="text-block-2">Order entry is fast and easy. The Cost will auto-calculate in $ and % letting you know what the impact of the trade will be on the position and overall equity. The keyboard-free order entry is touch-screen compatible. <strong>Osmium </strong>is ideal for use with a tablet.</div>
