--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jun 20 2025 14:48:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jun 20 2025 14:54:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="684d9f3269f8d0a9074b2259" data-wf-site="684d9f3269f8d0a9074b225d">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
           <div class="paragraph-bigger cc-bigger-light">The <span class="text-span"><em>Free </em></span>Portfolio Trading Desk<br></div>
         </div>
         <div>Version 0.4.2</div>
-        <a href="/OsmiumSetup042.msi" class="secondary-button w-inline-block">
+        <a href="/SetupOsmium042.msi" class="secondary-button w-inline-block">
           <div>Download</div>
         </a>
         <div class="w-layout-blockcontainer container-3 w-container">
