--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jun 20 2025 14:54:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jun 20 2025 19:02:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="684d9f3269f8d0a9074b2259" data-wf-site="684d9f3269f8d0a9074b225d">
 <head>
   <meta charset="utf-8">
@@ -48,7 +48,7 @@
         <p id="w-node-_56f2b96e-ae6e-7af1-6a3b-a2d7387904dd-074b2259" class="paragraph-light"><strong>Osmium </strong>is a real-time trading desk for managing a portfolio of <strong><em>stock </em></strong>and <strong><em>ETF </em></strong>markets over time. The focus is on the allocation of equity and the execution of orders with a precise foreknowledge of how each order will effect the equity balance. <strong>Osmium </strong>is a distraction-free, easy-to-use trading desktop.</p>
         <div class="text-block-3"><strong>Osmium </strong>sits on Alpaca. To use it, you will need an Alpaca account. It can be a Live or Paper account however, it is recommended that a paper account is used to initially evaluate the software and get a feel for its responsiveness and how it presents data. The &quot;unlimited&quot; Alpaca data subscription is highly recommended.<br><br>This software may be used under the<strong> Apache 2 license AS IS</strong>. Here is a link:<br>
           <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache 2.0 license</a>No warranty or guarantee of functionality is made. Trading any security is risky and <strong>Osmium </strong>is to be used at your own risk. <br><br><br>‍
-        </div><img class="image-2" src="images/Os-Icon.png" width="350" height="350" alt="" sizes="(max-width: 479px) 100vw, 350px" id="w-node-e8d716c1-9e0b-4374-d841-359e2e2de505-074b2259" loading="lazy" srcset="images/Os-Icon-p-500.png 500w, images/Os-Icon-p-800.png 800w, images/Os-Icon.png 1067w">
+        </div><img src="images/Os-Icon.jpg" loading="lazy" id="w-node-f7a2abe3-b485-008a-1e2e-9a7d4df9375b-074b2259" alt="">
       </div>
     </div>
     <div class="container"></div>
